// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Elements|Pagination Example with both 1`] = `
<div
  className="css-6s6wkd"
>
  <ul
    className="css-a0kj0k"
  >
    <li
      className="css-h0x65k"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        <span
          className="css-16mb02n"
        >
          <svg
            className="css-1x31itk"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      ...
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/4"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="css-e41l1n"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/5"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/6"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      ...
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        10
      </a>
    </li>
    <li
      className="css-h0x65k"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        <span
          className="css-16mb02n"
        >
          <svg
            className="css-1uq55v0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Pagination Example with href 1`] = `
<div
  className="css-6s6wkd"
>
  <ul
    className="css-a0kj0k"
  >
    <li
      className="css-h0x65k"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        <span
          className="css-16mb02n"
        >
          <svg
            className="css-1x31itk"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/1"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      ...
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/4"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="css-e41l1n"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/5"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/6"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      ...
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        10
      </a>
    </li>
    <li
      className="css-h0x65k"
    >
      <a
        className="css-8dcm3f"
        href="http://uswitch.com/page/10"
        onClick={[Function]}
      >
        <span
          className="css-16mb02n"
        >
          <svg
            className="css-1uq55v0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements|Pagination Example with onClick 1`] = `
<div
  className="css-6s6wkd"
>
  <ul
    className="css-a0kj0k"
  >
    <li
      className="css-h0x65k"
    >
      <a
        className="css-8dcm3f"
        onClick={[Function]}
      >
        <span
          className="css-16mb02n"
        >
          <svg
            className="css-1x31itk"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        onClick={[Function]}
      >
        1
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      ...
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        onClick={[Function]}
      >
        4
      </a>
    </li>
    <li
      className="css-e41l1n"
    >
      <a
        className="css-8dcm3f"
        onClick={[Function]}
      >
        5
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        onClick={[Function]}
      >
        6
      </a>
    </li>
    <li
      className="css-q30qyt"
    >
      ...
    </li>
    <li
      className="css-q30qyt"
    >
      <a
        className="css-8dcm3f"
        onClick={[Function]}
      >
        10
      </a>
    </li>
    <li
      className="css-h0x65k"
    >
      <a
        className="css-8dcm3f"
        onClick={[Function]}
      >
        <span
          className="css-16mb02n"
        >
          <svg
            className="css-1uq55v0"
            viewBox="0 0 120 120"
          >
            <path
              d="M 5.067303,79.355139 55.218287,26.773283 c 2.186148,-2.194309 3.091615,-2.969251 4.60071,-2.969251 1.509096,-0.0081 2.316669,0.774942 4.600711,3.018196 l 50.828042,53.348639 c 6.84396,7.227354 -3.27925,17.831823 -10.17214,10.661571 L 59.810835,43.21837 15.247593,89.98408 C 7.857094,97.733499 -2.2660959,87.120873 5.067303,79.338823 Z"
            />
          </svg>
        </span>
      </a>
    </li>
  </ul>
</div>
`;
